--- a/Distribuidora/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Distribuidora/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,33 +5,33 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home_icon"
+            android:title="Home" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_add"
+            android:icon="@drawable/ic_add_icon"
+            android:title="Adicionar" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_edit"
+            android:icon="@drawable/ic_edit_icon"
+            android:title="Editar" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_delete"
+            android:icon="@drawable/ic_garbage_icon"
+            android:title="Deletar" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Opções">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_settings_icon"
+                android:title="Configurações" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_exit"
+                android:icon="@drawable/ic_exit_icon"
+                android:title="Sair" />
         </menu>
     </item>
 
